Use fresh Java & libs, minor refactor